# franka_husky_description

./: CMakeLists.txt  README.md  package.xml
launch/: description.launch
robots/: franka_husky.xacro
