<?xml version="1.0"?>
<package>
  <name>franka_husky_description</name>
  <version>0.0.1</version>
  <description>franka husky description</description>

  <author email="psh117@snu.ac.kr">Suhan Park</author>

  <maintainer email="psh117@snu.ac.kr">Suhan Park</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>franka_description</run_depend>
  <run_depend>husky_description</run_depend>

  <export>
  </export>
</package>
